# NNRustChess

./: .gitignore  .gitmodules  README.md  README.txt  TODO.md  requirements.txt  requirements.yml  temp.yml
GenDataSet/: BuildStockfish.sh  GenData.py  config.sh
RustChessEngine/: Cargo.toml
RustChessEngine/GameState/: Cargo.toml
RustChessEngine/GameState/src/: lib.rs
RustChessEngine/MoveAlgebraNotation/: Cargo.toml
RustChessEngine/MoveAlgebraNotation/src/: lib.rs
RustChessEngine/PGNParser/: Cargo.toml
RustChessEngine/PGNParser/src/: lib.rs
RustChessEngine/RustBindings/: Cargo.toml
RustChessEngine/RustBindings/src/: lib.rs
RustChessEngine/SideState/: Cargo.toml
RustChessEngine/SideState/src/: lib.rs
RustChessEngine/chessio/: Cargo.toml
RustChessEngine/chessio/src/: lib.rs
RustChessEngine/constants/src/: lib.rs
RustChessEngine/engine/: Cargo.toml
RustChessEngine/engine/src/: main.rs
RustChessEngine/magic/: Cargo.toml
RustChessEngine/magic/src/: lib.rs
RustChessEngine/masks/: Cargo.toml
RustChessEngine/masks/src/: lib.rs
RustChessEngine/src/: chessio.rs  constants.rs  game_state.rs  lib.rs  magic.rs  main.rs  masks.rs  move_algebra_notation.rs  side_state.rs
TrainEngine/: GenData.py
