[package]
name = "chessio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constants = { path = "../constants" }
regex = "1.10.2"
safetensors = {git = "https://github.com/huggingface/safetensors.git"}