[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chessio = { path = "../chessio" }
constants = { path = "../constants" }
masks = { path = "../masks" }
magic = { path = "../magic" }
GameState = { path = "../GameState"}
MoveAlgebraNotation = { path = "../MoveAlgebraNotation"}
tch = { git = "https://github.com/LaurentMazare/tch-rs.git" }
