[package]
name = "masks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constants = { path = "../constants" }
chessio = { path = "../chessio" }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
